--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -1,8 +1,12 @@
 @import "~bootstrap/scss/bootstrap";
+* {
+  box-sizing: border-box;
+}
+
 
 .backoffice-container {
   background-color: bisque;
-  height: 100vh;
+  height: 100%;
   padding: 1%;
 
   .bo-header {
@@ -12,6 +16,10 @@
     text-align: center;
     font-size: 2em;
   }
+    .bo-search-filter{
+      border:1px solid black;
+      text-align: center;
+    }
   p{
     font-size: 1.2em;
   }
@@ -26,7 +34,11 @@
     gap: 1em;
     width: 60%;
   }
-  input {
+  .addproduct-btn{
+    width: fit-content;
+  }
+  input, 
+  select {
     border-radius: 5px;
     padding: 1%;
   }
@@ -36,12 +48,35 @@
    
  }
   .BO-one-product {
-    display: flex;
+    margin: 1em auto;
     border: 1px solid black;
     background-color: #fafafa8f;
-    margin: 1.3em;
     padding: 1%;
-  }
+    max-width: 70ch;
 
+    label{
+      font-weight:bold;
+      margin-right: .5em;
+    }
+
+        
+    .grid-container{
+      display: inline-grid;
+      grid-template-columns: auto auto auto;
+      column-gap: 1em;
+    }
+    .grid1 {
+      grid-column: 1/2;
+    }
+  
+    .grid2 {
+      grid-column: 2/4;
+    }
+
+  }
+  .detail-btn{
+    margin: 2em 1em 0 0;
+  }
+  
   
 }
