--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -1,4 +1,4 @@
-// @import "~bootstrap/scss/bootstrap";
+@import "~bootstrap/scss/bootstrap";
 * {
   box-sizing: border-box;
 }
@@ -52,7 +52,7 @@
     border: 1px solid black;
     background-color: #fafafa8f;
     padding: 1%;
-    max-width: 70ch;
+    max-width: 80ch;
 
     label{
       font-weight:bold;
@@ -62,7 +62,7 @@
         
     .grid-container{
       display: inline-grid;
-      grid-template-columns: auto auto auto;
+      grid-template-columns: auto auto auto auto;
       column-gap: 1em;
     }
     .grid1 {
@@ -71,12 +71,19 @@
   
     .grid2 {
       grid-column: 2/4;
+    
     }
-
+    .grid3{
+      grid-column: 4/5;
+    }
+    /*.img-grid{
+      grid-column: 4/6;
+     grid-row: 1/5;
+    }*/
   }
-  .detail-btn{
-    margin: 2em 1em 0 0;
-  }
+    .detail-btn {
+      margin-top: 2em;
+    }
   
   
 }
