--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -1,16 +1,24 @@
-// @import "~bootstrap/scss/bootstrap";
+
 * {
   box-sizing: border-box;
 }
-
+// #CCF3EE  <- ljusturkos
+// #F9CEEE  <- rosa
+// #F9F3EE  <- gul?
+// #97C4B8  <- grön
 
 .backoffice-container {
-  background-color: bisque;
-  height: 100%;
+  background-color: #97C4B8;
   padding: 1%;
 
   .bo-header {
     margin: 2em;
+    display: flex;
+   
+    h2{
+      margin: 0 auto;
+    }
+    
   }
   h2 {
     text-align: center;
@@ -52,7 +60,7 @@
     border: 1px solid black;
     background-color: #fafafa8f;
     padding: 1%;
-    max-width: 70ch;
+    max-width: 80ch;
 
     label{
       font-weight:bold;
@@ -62,7 +70,7 @@
         
     .grid-container{
       display: inline-grid;
-      grid-template-columns: auto auto auto;
+      grid-template-columns: auto auto auto auto;
       column-gap: 1em;
     }
     .grid1 {
@@ -71,12 +79,39 @@
   
     .grid2 {
       grid-column: 2/4;
+    
     }
+    .grid3{
+      grid-column: 4/5;
+    }
+    /*.img-grid{
+      grid-column: 4/6;
+     grid-row: 1/5;
+    }*/
+  }
+    .detail-btn {
+      margin-top: 2em;
+    }
+  
+  
+}
 
+.update-container {
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
+  padding: 2%;
+  background-color: #CCF3EE;
+  border: 2px solid black;
+  box-shadow: 2px 8px 15px 8px rgba(0, 0, 0, 0.71);
+
+  input, select, textarea {
+    margin: 1em;
   }
-  .detail-btn{
-    margin: 2em 1em 0 0;
+  .btn-div{
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    padding:3%;
   }
-  
-  
 }
