--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -70,24 +70,24 @@
         
     .grid-container{
       display: inline-grid;
-      grid-template-columns: auto auto auto auto;
+      grid-template-columns: auto auto auto auto auto;
       column-gap: 1em;
     }
     .grid1 {
-      grid-column: 1/2;
+      grid-column: 3/4;
     }
   
     .grid2 {
-      grid-column: 2/4;
+      grid-column: 4/5;
     
     }
     .grid3{
-      grid-column: 4/5;
+      grid-column: 5/6;
     }
-    /*.img-grid{
-      grid-column: 4/6;
+    .img-grid{
+      grid-column: 1/2;
      grid-row: 1/5;
-    }*/
+    }
   }
     .detail-btn {
       margin-top: 2em;
@@ -114,4 +114,7 @@
     justify-content: space-between;
     padding:3%;
   }
+    .price-cat{
+      width: fit-content;
+    }
 }
