--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -41,14 +41,20 @@
     display: grid;
     gap: 1em;
     width: 60%;
-  }
-  .addproduct-btn{
-    width: fit-content;
+
+    .addproduct-btn{
+      width: fit-content;
+
+    }
   }
   input, 
   select {
     border-radius: 5px;
     padding: 1%;
+    width: 70%;
+  }
+  .img-btn{
+   width:20%;
   }
  .bo-nav {
    display: grid;
@@ -61,6 +67,7 @@
     background-color: #fafafa8f;
     padding: 1%;
     max-width: 80ch;
+    flex-shrink: 1;   
 
     label{
       font-weight:bold;
@@ -72,6 +79,9 @@
       display: inline-grid;
       grid-template-columns: auto auto auto auto auto;
       column-gap: 1em;
+      flex-wrap: wrap;
+        flex-shrink: 1;
+        flex-grow: 1;
     }
     .grid1 {
       grid-column: 3/4;
@@ -87,6 +97,9 @@
     .img-grid{
       grid-column: 1/2;
      grid-row: 1/5;
+    }
+    .grid-btn{
+    grid-column: 1/2;
     }
   }
     .detail-btn {
