BO is a bit more responsive.

--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -1,5 +1,5 @@
 body {
-  background-color: #F9F3EE;
+  background-color: black;
 }
 * {
   box-sizing: border-box;
@@ -11,11 +11,12 @@ body {
 // #97C4B8  <- grön
 
 .backoffice-container {
-  background-color: #ccf3ee9a;
+  background-color: #ccf3eedc;
   padding: 1%;
-  width: 100%;
+  min-height: 50vh; 
  
-    .bo-successheader, .bo-header {
+    .bo-successheader,
+     .bo-header {
       padding:2%;
       height: fit-content;
       justify-content: center;
@@ -23,17 +24,18 @@ body {
       color: black;
 
 
-  .bo-successheader,
-  .bo-header {
-    padding: 2%;
-    height: fit-content;
-    justify-content: center;
-    background-color: #97C4B8;
-    color: black;
-
-
     .header-btn {
       font-size: 2em;
+    }
+    button{
+      border-radius: 10px;
+      border: none;
+      background-color:#ccf3ee9a;
+      padding: .7%;
+      
+      a{ 
+      font-weight: bold;
+    }
     }
 
     .btn-p {
@@ -55,6 +57,10 @@ body {
   a {
     text-decoration: none;
     color: black;
+
+    &:hover {
+      font-weight: bold;
+    }
   }
 
 
@@ -63,13 +69,9 @@ body {
     border-radius: 10px;
     padding: .7%;
 
-    a {
-      color: black;
-
-      &:hover {
+    a:hover {
         color: white;
         font-weight: bold;
-      }
     }
   }
 
@@ -78,9 +80,9 @@ body {
   .create-category {
     display: grid;
     gap: 1em;
-    padding: 2%;
+    padding: 3%;
     height: fit-content;
-    background-color: #CCF3EE;
+    background-color: #ccf3eead;
 
     .addproduct-btn,
     .addcategory-btn {
@@ -104,7 +106,7 @@ body {
     display: grid;
     gap: 1em;
     grid-template-columns: auto auto;
-    margin: 1em auto;
+    margin: 3em auto;
 
     .bo-links {
       background-color: #97C4B8;
@@ -112,6 +114,9 @@ body {
       border: none;
       border-radius: 10px;
       padding: 1%;
+    }
+    a{
+      text-decoration: none;
     }
 
   }
@@ -129,15 +134,15 @@ body {
       margin-right: .5em;
     }
 
-
+@media screen and (min-width: 768px) {
     .grid-container {
-      display: inline-grid;
+      display: grid;
       grid-template-columns: auto auto auto auto auto;
       column-gap: 1em;
       flex-wrap: wrap;
       flex-shrink: 1;
       flex-grow: 1;
-    }
+    
 
     .grid1 {
       grid-column: 3/4;
@@ -165,8 +170,8 @@ body {
   .detail-btn {
     margin-top: 2em;
   }
-
-
+    }
+  }
 }
 
 .update-container {
@@ -194,4 +199,11 @@ body {
   .price-cat {
     width: fit-content;
   }
+
+
 }
+
+
+ 
+
+
