--- a/src/css/ProductList.css
+++ b/src/css/ProductList.css
@@ -2,21 +2,22 @@ body{
     margin-top: 200px;
 }
 .ProductList {
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
-    padding: 30px;
+    gap: 1%;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    gap: 2% 2%;
     font-family: 'Raleway';
     color: black ;
 }
 
-.Card {
-    height: 900px;
+.PCard {
+    min-height: 800px;
     background-color: #F9CEEE;
     border: none;
+    /* min-width: 380px; */
+    
 }
 .ProdImg {
         width: 150px;
@@ -26,11 +27,8 @@ body{
 }
 .CText {
         height: fit-content;
-       overflow: hidden;
-      text-overflow: ellipsis;
-       max-height: 20px;
-        white-space: nowrap;
-}
+       max-height: 40px;
+} 
 .CFooter {
    background-color: #CCF3EE;
    display: flex;
@@ -38,10 +36,14 @@ body{
 }
 .CBody {
 background-color: #F9F3EE;
+max-height: 200px;
+/* min-height: fit-content; */
 }
-.CTitle {
- height: 8rem;
-}
+
+/* .CTitle {
+    min-height:8rem;
+} */
+
 .buyBtn {
         background-color: #FEC98F;
         border: none;
@@ -56,11 +58,31 @@ margin: 3% auto;
 display: flex;
 flex-direction: column;
 align-items: center;
-} 
+}
+
 .ProductFilter, .ProductSort, .ProductSearch {
     width: fit-content;
     min-width: 380px;
     height: 50px;
     margin-bottom: 1%;
     text-align:center;
+}
+
+@media only screen and (max-width: 1200px){
+    .PCard {
+        min-width: 200px;
+    }
+    .ProductList {
+        gap: 2%;
+    }
+}
+@media only screen and (max-width: 600px){
+    .PCard {
+        min-width: 380px;
+    }
+}
+@media only screen and (max-width: 425px){
+    .PCard {
+        min-width: 380px;
+    }
 }
