--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -114,6 +114,7 @@
 
   @media screen and(min-width: 768px) {
     display:flex;
+    justify-content: center;
   }
 
   .all-products{
@@ -143,10 +144,10 @@
     padding: 2%;
     border: 1px solid black;
     box-shadow: 2px 8px 15px 8px rgba(0, 0, 0, 0.61);
-  background-color: #f9ceeec8;
+    background-color: #f9ceeec8;
     @media screen and(min-width: 768px) {
       height:fit-content;
-      max-width: 70ch;
+      width:40%;
     }
     Button{
     margin-top:1em;
