SW omgjord, fungerar ibland....

--- a/src/components/Backoffice/Backoffice.scss
+++ b/src/components/Backoffice/Backoffice.scss
@@ -3,7 +3,7 @@
   font-family: 'Raleway';
   background-color: #97c4b89f;
   padding: 2%;
-  margin:0 1em;
+  margin: 1em;
   min-height: 100vh;
   
   h2,h3,h4{
@@ -195,4 +195,10 @@
        }
      }
 
+}
+
+.testcontainer {
+  background-color: rgb(242, 245, 242);
+  margin-top: 20%;
+  height: 200px;
 }
