navbar,categories & bug fixes

--- a/src/css/Dashboard.css
+++ b/src/css/Dashboard.css
@@ -1,6 +1,6 @@
-.dashboard-container {
+/* .dashboard-container {
   background-color: rgb(249, 206, 238);
-}
+} */
 
 .carousel-container img {
   /* min-width: 10%; */
